# GPA_Calculator

./: CMakeLists.txt  CMakePresets.json  Person.cpp  ReadMe.md  ReadMe.md.txt  add_elem_to_table_dialog.cpp  add_elem_to_table_dialog.h  add_elem_to_table_dialog.ui  admin.cpp  admin.h  admin_dialog.cpp  admin_dialog.h  admin_dialog.ui  admin_profile_dialog.cpp  admin_profile_dialog.h  admin_profile_dialog.ui  admin_signIn_dialog.cpp  admin_signIn_dialog.h  admin_signIn_dialog.ui  administration.cpp  administration.h  administrator.cpp  build-release.lnk  calculate_gpa_dialog.cpp  calculate_gpa_dialog.h  calculate_gpa_dialog.ui  create_new_database_dialog.cpp  create_new_database_dialog.h  create_new_database_dialog.ui  create_table_dialog.cpp  create_table_dialog.h  create_table_dialog.ui  dialog_view_tables.cpp  dialog_view_tables.h  dialog_view_tables.ui  gpa.qrc  gpa_logo.qrc  icons.qrc  mainwindow.cpp  mainwindow.h  (+18 more)
.cache/clangd/index/: Person.cpp.CFCDD11D56899213.idx  admin.h.4EBAC5B7076D7FD3.idx  admin_dialog.h.5DA9CC3C5E0212BD.idx  admin_profile_dialog.h.708E135C60934BC6.idx  administration.cpp.8014589BDBD69FAE.idx  administration.h.ACE3D6EC0F1C477D.idx  main.cpp.0A7800DAD4EB9BB5.idx  mainwindow.cpp.D48F275D075EB023.idx  mainwindow.h.8AE142A8999B5161.idx  mysqlite_db.cpp.F8C078023B1815E3.idx  mysqlite_db.h.583D0989207AA585.idx  person.h.CDA70D9702D43EAF.idx  registration_dialog.cpp.B5BD398A3C850985.idx  registration_dialog.h.621C05AE4B4992BE.idx  signin_dialog.cpp.657176095A656F5F.idx  signin_dialog.h.6D627413C04EB61F.idx  student.cpp.E2E92F16836D6E5D.idx  student.h.49ECCE7F8E1A0896.idx  student_profile_dialog.cpp.ED37FE0ACC55F46C.idx  student_profile_dialog.h.4C35B510F5B39E6B.idx  subject.cpp.1C75C303DA897B69.idx  subject.h.57B639FA8FD7019B.idx
database/: db_gpa.db  db_gpa.db-journal  db_gpa.sqbpro
documentation/: UseCases.docx
documentation/logos/admin_files/: 1_mbyY4L4gs5v8XOiMCF3BL2_WY.br.css  ODF.1ucTVkR4l10eT3E3z__pgw  ODF.9TlIIBgEFhmYI3Rtyk2IKA  OIP.0TX_N6-yw-xOxjM90Et0OQAAAA  OIP.2aku8D14vVCEqYNkVGcfcAAAAA  OIP.2dQoY0rcMZt9Qjx1vZXkzwHaE7  OIP.4rg0EIUdJanAKsaiULxj6gAAAA  OIP.6GV4873CVi7_z4dSzogloQHaHa  OIP.76RYthJQjmvDnk3ojFuq-wHaEk  OIP.9IOpPXXMFAfy67ZXE2ps_wHaHa  OIP.D01fTTNWRYvlgEtgWQXMXwHaA5  OIP.EFK-Kwlqf3BCYj7EgLPwDgHaBv  OIP.Gk2xqPzhV064kAo_vZkVjQHaHa  OIP.Hs8seARfs-LtbvYoOJ0gMAAAAA  OIP.J3nI85Sxz9jI2n800y9w4wAAAA  OIP.JVTXJ2fAE2kgxdOpTRH5aQAAAA  OIP.KAZs2vacTzKVAnt1WffACwHaHa  OIP.KwAOOJ7-AUOR1o7K-6Zo8gHaFj  OIP.M5RckHfNTu-arEGVCXj47gAAAA  OIP.PZM2bUn6KlKkX0MCj-t-lwAAAA  OIP.PlAIiLHHoUIwlMtY0mU38wAAAA  OIP.QnJueIxyX3TOd4tdBpGwuQHaHa  OIP.RZU89CuqTgGjpAot5entBAHaD7  OIP.SIH5_LUhdlY0ywQiXUZYeQAAAA  OIP.SpSVpUatrH4-byz1v_jW8AAAAA  OIP.Z4UAIaJo8f9pV0a8ZCuxLwAAAA  OIP.Z8XGWNHWfYPxhijPBjBXiwHaHa  OIP.bxNsyrKTSYJVuWGlkev27gAAAA  OIP.cdW2mjaZIjYiuR4tVgQARgHaHa  OIP.j0uAz3PFXDFYzUbP_B5QXgHaHa  OIP.j8sYUCjWMEhxb8DS8xJ7VwAAAA  OIP.lZFkYSCMrijGEL05jgSUYQAAAA  OIP.mnD5adIEJSGw1ErmaWnZSgHaCi  OIP.oo_wr1dO1Z95gzuzjpblMAHaHa  OIP.tNhByRHVfVgRwr083sihlQAAAA  OIP.ugiYSGQwEt9j516RcLPIyAHaHb  OIP.v2TRcWiU-rHMiCGCznjC9gHaHa  OIP.vS_FffbnUkxi-d2EkCAvTAAAAA  OIP.vqWfdjyEZAyrAv_Sp_RFxwAAAA  OIP.zBAUm3_uc7d2zesCRF87qgAAAA  (+2 more)
